--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,16 @@
 {{ define "main" }}
-
+<div class="row">
+    <div class="col-sm-12">
+        {{- partial "carousel.html" . -}}
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-6 p-5">
+            <h3 class="pt-4 pb-4">About Go Programming Hub</h3>
+            <p>Knowledge is wisdom! Our mission is to provide quality, reliable content to the audience.</p>
+        </div>
+        <div class="col-sm-6  p-5">image</div>
+    </div>
+</div>
 {{ end }}
