--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,10 +17,10 @@
                 <p class="card-subtitle mb-3 text-muted">{{- partial "metadata-post.html" . -}}</p>
                 {{ .Content }}
             </article>
-            <div class="row mb-2">
-                <div class="col-sm-6">
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     {{ with .PrevInSection }}
-                    <a class="btn btn-primary btn-sm previous" href="{{.Permalink}}">
+                    <a class="btn btn-primary btn-sm previous ms-2 mb-2" href="{{.Permalink}}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-chevron-left" viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
@@ -28,9 +28,9 @@
                         </svg> Previous: {{.Title}}</a>
                     {{ end }}
                 </div>
-                <div class="col-sm-6 text-end">
+                <div class="col-12 col-sm-6 text-end">
                     {{ with .NextInSection }}
-                    <a class="btn btn-primary btn-sm next" href="{{.Permalink}}">
+                    <a class="btn btn-primary btn-sm next me-2 mb-2" href="{{.Permalink}}">
                         Next: {{.Title}}
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-chevron-right" viewBox="0 0 16 16">
