Update in theme

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
     <div class="row">
         {{ range .Pages.ByPublishDate.Reverse }}
         <div class="col-sm-6">
-            <div class="card">
+            <div class="card transition">
                 <div class="card-body">
                     <h5 class="card-title">{{ .Title }}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">
