--- a/layouts/partials/carousel.html
+++ b/layouts/partials/carousel.html
@@ -9,31 +9,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second
-                    slide</text>
-            </svg>
+            <img src="/images/go-banner.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second
-                    slide</text>
-            </svg>
+            <img src="/images/go-banner.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="400"
-                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide"
-                preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>Placeholder</title>
-                <rect width="100%" height="100%" fill="#666"></rect><text x="50%" y="50%" fill="#444" dy=".3em">Second
-                    slide</text>
-            </svg>
+            <img src="/images/go-banner.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
