--- a/css/theme.css
+++ b/css/theme.css
@@ -1,5 +1,6 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-size: 1.1rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .center {
@@ -45,6 +46,24 @@
 
 ul.list-group {
     border: none !important;
+}
+
+.card.transition {
+    border-radius: 1rem !important;
+    transition: 0.3s;
+}
+
+.card.transition:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.highlight, .highlight div, .highlight table {
+    border-radius: 1rem !important;
+}
+
+.highlight pre {
+    font-family: 'Courier New' !important;
+    margin-bottom: 0px !important;
 }
 
 .tag-btn {
